--- a/uptime-kuma/uptime-kuma.yaml
+++ b/uptime-kuma/uptime-kuma.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate # Importante para evitar erro de montagem em disco local
+    type: Recreate # Necessário para liberar o PVC no k3s antes de subir o novo pod
   selector:
     matchLabels:
       app: uptime-kuma
@@ -27,3 +27,18 @@ spec:
       - name: uptime-kuma-data
         persistentVolumeClaim:
           claimName: uptime-kuma-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: uptime-kuma
+  namespace: uptime-kuma
+spec:
+  type: NodePort
+  selector:
+    app: uptime-kuma
+  ports:
+    - name: http
+      port: 3001
+      targetPort: 3001
+      nodePort: 31001 
