--- a/vault/deployment-vault.yaml
+++ b/vault/deployment-vault.yaml
@@ -20,7 +20,7 @@ spec:
         image: hashicorp/vault:1.15
         env:
         - name: VAULT_DEV_ROOT_TOKEN_ID
-          value: "root" # APENAS PARA LAB! Em produção, não use isso.
+          value: "root"
         - name: VAULT_LOCAL_CONFIG
           value: |
             storage "file" {
@@ -41,4 +41,3 @@ spec:
       - name: vault-data
         persistentVolumeClaim:
           claimName: vault-pvc
-
