--- a/vault/deployment-vault.yaml
+++ b/vault/deployment-vault.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: vault
     spec:
+      securityContext:
+      fsGroup: 1000 # Dá permissão ao grupo do Vault para ler/escrever no volume
       containers:
       - name: vault
         image: hashicorp/vault:1.15
