--- a/zabbix/postgres-deployment.yaml
+++ b/zabbix/postgres-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:13
+          image: postgres:16-alpine
           ports:
             - containerPort: 5432
           env:
