--- a/zabbix/zabbix-web-deployment.yaml
+++ b/zabbix/zabbix-web-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: zabbix-web
-          image: zabbix/zabbix-web-nginx-pgsql:ubuntu-6.0-latest
+          image: zabbix/zabbix-web-nginx-pgsql:alpine-7.4-latest
           ports:
             - containerPort: 8080
           env:
