--- a/kafka-infra/kafka/cluster.yaml
+++ b/kafka-infra/kafka/cluster.yaml
@@ -7,7 +7,7 @@ spec:
   kafka:
     version: 3.7.0
     replicas: 1
-    metadataVersion: 3.7-IV4
+    metadataVersion: 3.7-IV4 # Define a versão de metadados para o KRaft
     listeners:
       - name: plain
         port: 9092
@@ -23,15 +23,13 @@ spec:
           type: scram-sha-512
         configuration:
           bootstrap:
-            nodePort: 30094
+            nodePort: 30094 # Porta para acesso externo
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
-      transaction.state.log.min.isr: 1
-      default.replication.factor: 1
-      min.insync.replicas: 1
+      storage.layout: kraft
     storage:
-      type: ephemeral
+      type: ephemeral # Dados temporários para aprendizado
   entityOperator:
     topicOperator: {}
     userOperator: {}
