--- a/kafka-infra/kafka/deployment-kafka-ui.yaml
+++ b/kafka-infra/kafka/deployment-kafka-ui.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: kafka-ui
   namespace: kafka
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   replicas: 1
   selector:
@@ -33,17 +35,3 @@ spec:
             secretKeyRef:
               name: joao-admin
               key: sasl.jaas.config
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: kafka-ui-service
-  namespace: kafka
-spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 8080
-      nodePort: 30180
-  selector:
-    app: kafka-ui
