--- a/kafka-infra/kafka/deployment-kafka-ui.yaml
+++ b/kafka-infra/kafka/deployment-kafka-ui.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: kafka-ui
   namespace: kafka
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
 spec:
   replicas: 1
   selector:
@@ -32,4 +34,3 @@ spec:
             secretKeyRef:
               name: joao-admin
               key: sasl.jaas.config
-  
