--- a/kafka-observability/kafka-deployment.yaml
+++ b/kafka-observability/kafka-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
 
         - name: kafka
-          image: bitnami/kafka:latest
+          image: bitnami/kafka:3.6.0-debian-11-r0
           ports:
             - containerPort: 9092
             - containerPort: 5556
