--- a/kafka-observability/kafka-deployment.yaml
+++ b/kafka-observability/kafka-deployment.yaml
@@ -1,3 +1,4 @@
+# kafka-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,42 +15,29 @@ spec:
         app: kafka
     spec:
       containers:
-
         - name: kafka
-          image: bitnami/kafka:3.6.0-debian-11-r0
+          image: bitnami/kafka:3.6.0-debian-11-r0  # tag fixa
           ports:
             - containerPort: 9092
-            - containerPort: 5556
           env:
-            - name: KAFKA_CFG_NODE_ID
+            - name: KAFKA_BROKER_ID
               value: "1"
-            - name: KAFKA_CFG_PROCESS_ROLES
-              value: "broker,controller"
-            - name: KAFKA_CFG_CONTROLLER_QUORUM_VOTERS
-              value: "1@localhost:9093"
-            - name: KAFKA_CFG_LISTENERS
-              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
-            - name: KAFKA_CFG_ADVERTISED_LISTENERS
-              value: "PLAINTEXT://kafka:9092"
-            - name: KAFKA_CFG_CONTROLLER_LISTENER_NAMES
-              value: "CONTROLLER"
-            - name: ALLOW_PLAINTEXT_LISTENER
-              value: "yes"
-            - name: KAFKA_OPTS
-              value: "-javaagent:/opt/bitnami/kafka/libs/jmx_prometheus_javaagent.jar=5556:/etc/jmx/kafka-jmx-config.yml"
-          volumeMounts:
-            - name: jmx-config
-              mountPath: /etc/jmx
-
-        - name: jmx-exporter
-          image: bitnami/jmx-exporter:0.16.1-debian-11-r0
-          ports:
-            - containerPort: 5556
-          volumeMounts:
-            - name: jmx-config
-              mountPath: /etc/jmx
-
-      volumes:
-        - name: jmx-config
-          configMap:
-            name: kafka-jmx-config
+            - name: KAFKA_LISTENERS
+              value: PLAINTEXT://:9092
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: PLAINTEXT://kafka.kafka.svc.cluster.local:9092
+            - name: KAFKA_ZOOKEEPER_CONNECT
+              value: zookeeper:2181  # Se quiser usar ZK externo
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka
+  namespace: kafka
+spec:
+  type: ClusterIP
+  selector:
+    app: kafka
+  ports:
+    - port: 9092
+      targetPort: 9092
